# KorfsRubiksCubeSolver

./: CMakeLists.txt  Readme.md  RubiksCube.cpp  RubiksCube.h  RubiksCube1D.cpp  RubiksCube3d.cpp  RubiksCubeBitBoard.cpp  main.cpp
PatternDatabase/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solver/: BFS.h  DFS.cpp  DFS.h  DummyHeuristic.h  IDAstarSolver.h  IDDFS.h
